Fix COMMANDLINE_TYPEDARRAYS build https://bugs.webkit.org/show_bug.cgi?id=84051

Reviewed by Gavin Barraclough.

Update for new putByIndex API and wtf changes.

* JSCTypedArrayStubs.h:
(JSC):

Canonical link: https://commits.webkit.org/101549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114274 268f45cc-cd09-0410-ab3c-d52691b4dbfc